--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ validator = { version = "0.20.0", features = ["derive"] }
 thiserror = { version = "2.0.14"}
 time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
 
+jsonwebtoken = { version = "9.3.1"}
+
 [lints]
 clippy.all = "warn"
 clippy.pedantic = "warn" 
