--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4"
-uuid = {version = "1.18.0", features = ["v4"]}
+uuid = {version = "1.18.0", features = ["v4", "serde"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = { version = "1.0"}
 
