--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4"
+actix-web-httpauth = "0.8.0"
 uuid = {version = "1.18.0", features = ["v4", "serde"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = { version = "1.0"}
@@ -23,7 +24,7 @@ tokio = { version = "1.0", features = ["full"] }
 anyhow = "1.0.99"
 
 validator = { version = "0.20.0", features = ["derive"] }
-thiserror = { version = "2.0.14"}
+thiserror = { version = "2.0.15"}
 time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
 
 jsonwebtoken = { version = "9.3.1"}
